--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to GitHub Pages
+name: Deploy Vite app to GitHub Pages
 
 on:
   push:
@@ -6,31 +6,29 @@ on:
       - main
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repo
+      - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Install Node
+      - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 18
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
-      - name: Build project
-        run: npm run build
-        env:
-          VITE_ACCESS_KEY: ${{ secrets.VITE_ACCESS_KEY }}
-          VITE_SECRET_ACCESS_KEY: ${{ secrets.VITE_SECRET_ACCESS_KEY }}
-          VITE_API_URL: ${{ secrets.VITE_API_URL }}
+      - name: Build with Vite
+        run: |
+          echo "VITE_API_URL=${{ secrets.VITE_API_URL }}" >> .env
+          echo "VITE_ACCESS_KEY=${{ secrets.VITE_ACCESS_KEY }}" >> .env
+          echo "VITE_SECRET_ACCESS_KEY=${{ secrets.VITE_SECRET_ACCESS_KEY }}" >> .env
+          npm run build
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
-          publish_branch: gh-pages
